--- a/paper/references.bib
+++ b/paper/references.bib
@@ -78,4 +78,11 @@
     url = {https://github.com/dcomtois/summarytools},
   }
   @misc{GSS, url={https://gss.norc.org/}, journal={NORC}} 
-  @misc{CES, url={http://www.ces-eec.ca/}, journal={Canadian Election Study}} 
+  @misc{CES, url={http://www.ces-eec.ca/}, journal={Canadian Election Study}}
+ @Manual{R-rstanarm,
+  title = {rstanarm: Bayesian Applied Regression Modeling via Stan},
+  author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
+  year = {2020},
+  note = {R package version 2.21.1},
+  url = {https://mc-stan.org/rstanarm},
+},
